# 8ProjetosEmPython-1

./: Chute_o_numero.py  decida_por_mim.py  jogo_de_aventura.py  pyproject.toml
