[tool.poetry]
name = "8projetos"
version = "0.1.0"
description = "Arquivo poetry criado para adicionar ambiente virtual ao programa"
authors = ["Lubeen <luan.silvapvh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.4.0"
PySimpleGUI = "^4.60.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
